--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-three/fiber": "^9.1.0",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
@@ -67,6 +68,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0",
+    "three-globe": "^2.42.3",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
