--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
@@ -54,6 +55,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
     "input-otp": "1.4.1",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.454.0",
     "next": "^15.2.2",
     "next-themes": "^0.4.4",
@@ -61,6 +63,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-scroll-parallax": "^3.4.5",
     "recharts": "2.15.0",
