--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-scroll-parallax": "^3.4.5",
     "recharts": "2.15.0",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
