--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.0.0-alpha.8",
-    "@studio-freight/lenis": "^1.0.42",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
@@ -52,7 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "colorthief": "^2.6.0",
-    "date-fns": "4.1.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
     "input-otp": "1.4.1",
@@ -60,9 +58,9 @@
     "lucide-react": "^0.454.0",
     "next": "^15.2.2",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -81,8 +79,9 @@
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/node": "^22",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "critters": "^0.0.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
