--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.16",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
