--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tsparticles/slim": "^3.8.1",
     "@tweenjs/tween.js": "^25.0.0",
     "@types/animejs": "^3.1.13",
+    "@types/three": "^0.176.0",
     "animejs": "^3.2.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -56,18 +57,18 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
-    "gsap": "^3.12.7",
+    "gsap": "^3.13.0",
     "imagesloaded": "^5.0.0",
     "input-otp": "1.4.1",
     "lenis": "^1.2.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.7.4",
-    "next": "^15.2.2",
+    "next": "^14.1.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -86,9 +87,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^20",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
