--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "lighthouse": "^12.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
