bandaid work page fix

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tsparticles/slim": "^3.8.1",
     "@tweenjs/tween.js": "^25.0.0",
     "@types/animejs": "^3.1.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/three": "^0.176.0",
     "animejs": "^3.2.2",
     "autoprefixer": "^10.4.20",
@@ -60,6 +61,7 @@
     "gsap": "^3.13.0",
     "imagesloaded": "^5.0.0",
     "input-otp": "1.4.1",
+    "js-cookie": "^3.0.5",
     "lenis": "^1.2.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
