--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-scroll-parallax": "^3.4.5",
     "recharts": "2.15.0",
+    "resend": "^4.5.1",
     "sass": "^1.86.3",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
