--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/animejs": "^3.1.13",
     "@types/js-cookie": "^3.0.6",
     "@types/three": "^0.176.0",
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^3.2.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
