--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "colorthief": "^2.6.0",
+    "compression": "^1.8.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
